# momentum

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  REPORT.md  pyproject.toml
.github/: .templateignore
.github/workflows/: sync-template.yml
src/framework/: ew_dash.py  opt_dash.py  performance.py  production.py  research.py  run_backtest.py
src/framework/layouts/: research.grid.json
src/signal/: create_signal.py  signal_research.ipynb
